add front + back